[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Licenses/Licenses.gd" type="Script" id=1]
[ext_resource path="res://theme/monsterfangen_default.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.92549, 0.937255, 0.956863, 1 )

[node name="Licenses" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
margin_right = 400.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 30
custom_constants/margin_left = 15
custom_constants/margin_bottom = 0

[node name="LicenseList" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
margin_left = 15.0
margin_top = 30.0
margin_right = 385.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="ScrollContainer/MarginContainer/LicenseList"]
margin_right = 370.0
margin_bottom = 48.0
theme_type_variation = "PartyPanel"
text = "Back"

[node name="Intro" type="Label" parent="ScrollContainer/MarginContainer/LicenseList"]
margin_top = 52.0
margin_right = 370.0
margin_bottom = 111.0
theme_type_variation = "LabelOptions"
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The following projects and resources were used in the game"
autowrap = true

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MarginContainer/LicenseList"]
margin_top = 115.0
margin_right = 370.0
margin_bottom = 117.0
custom_constants/separation = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/LicenseList"]
margin_top = 121.0
margin_right = 370.0
margin_bottom = 141.0
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10

[node name="LicenseContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/LicenseList/MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 365.0
margin_bottom = 10.0
custom_constants/separation = 0

[connection signal="pressed" from="ScrollContainer/MarginContainer/LicenseList/BackButton" to="." method="_on_BackButton_pressed"]
